--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="#cars" class="hover:text-wine duration-300">Cars</a></li>
         <li><a href="#services" class="hover:text-wine duration-300">Services</a></li>
         <li><a href="#contact" class="hover:text-wine duration-300">Contact</a></li>
+        <li><a href="#contact" class="hover:text-wine duration-300">SignUp</a></li>
       </ul>
 
       <button id="menuBtn" class="md:hidden text-white text-3xl">&#9776;</button>
@@ -57,6 +58,7 @@
       <a href="#cars" class="hover:text-wine">Cars</a>
       <a href="#services" class="hover:text-wine">Services</a>
       <a href="#contact" class="hover:text-wine">Contact</a>
+      <a href="#contact" class="hover:text-wine">SignUp</a>
     </div>
   </nav>
 
